--- a/DeepLearningStudy/ex_lab-09-1-xor.ipynb
+++ b/DeepLearningStudy/ex_lab-09-1-xor.ipynb
@@ -55,7 +55,7 @@
     "Y = tf.placeholder(tf.float32, [None, 1])\n",
     "\n",
     "W = tf.Variable(tf.random_normal([2, 1]), name='weight')\n",
-    "b = tf.Variable(tf.random_normal([1]), name='bias')"
+    "b = tf.Variable(tf.random_normal([1]), name='bias')\n"
    ]
   },
   {
