--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -106,25 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data-04-zoo.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-685146193ed0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Predicting animal type based on various features\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mxy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data-04-zoo.csv'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mX_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxy\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0my_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxy\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda/envs/tensorflowCPU/lib/python3.6/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin)\u001b[0m\n\u001b[1;32m    896\u001b[0m                 \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'U'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 898\u001b[0;31m                 \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    899\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    900\u001b[0m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data-04-zoo.csv'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Predicting animal type based on various features\n",
-    "xy = np.loadtxt('data-04-zoo.csv', delimiter=',', dtype=np.float32)\n",
+    "xy = np.loadtxt('./data_file/data-04-zoo.csv', delimiter=',', dtype=np.float32)\n",
     "X_data = xy[:, 0:-1]\n",
     "N = X_data.shape[0]\n",
     "y_data = xy[:, [-1]]\n",
@@ -140,11 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y has one of the following values\n",
+      "[ 0.  1.  2.  3.  4.  5.  6.]\n"
+     ]
+    }
+   ],
    "source": [
     "# y_data has labels from 0 ~ 6\n",
     "print(\"y has one of the following values\")\n",
@@ -162,11 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of X data:  (101, 16)\n",
+      "Shape of y data:  (101, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# X_data.shape = (101, 16) => 101 samples, 16 features\n",
     "# y_data.shape = (101, 1)  => 101 samples, 1 label\n",
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -395,11 +396,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step:     0\t Loss:  453.74811\t Acc: 38.61%\n",
+      "Step:    10\t Loss:  135.79250\t Acc: 83.17%\n",
+      "Step:    20\t Loss:   95.05666\t Acc: 88.12%\n",
+      "Step:    30\t Loss:   77.29308\t Acc: 91.09%\n",
+      "Step:    40\t Loss:   66.43569\t Acc: 93.07%\n",
+      "Step:    50\t Loss:   58.81989\t Acc: 94.06%\n",
+      "Step:    60\t Loss:   53.09288\t Acc: 94.06%\n",
+      "Step:    70\t Loss:   48.58739\t Acc: 96.04%\n",
+      "Step:    80\t Loss:   44.92377\t Acc: 96.04%\n",
+      "Step:    90\t Loss:   41.86683\t Acc: 97.03%\n",
+      "Step:   100\t Loss:   39.26264\t Acc: 97.03%\n",
+      "Step:   110\t Loss:   37.00650\t Acc: 97.03%\n",
+      "Step:   120\t Loss:   35.02473\t Acc: 97.03%\n",
+      "Step:   130\t Loss:   33.26402\t Acc: 97.03%\n",
+      "Step:   140\t Loss:   31.68491\t Acc: 97.03%\n",
+      "Step:   150\t Loss:   30.25749\t Acc: 97.03%\n",
+      "Step:   160\t Loss:   28.95874\t Acc: 97.03%\n",
+      "Step:   170\t Loss:   27.77063\t Acc: 97.03%\n",
+      "Step:   180\t Loss:   26.67879\t Acc: 97.03%\n",
+      "Step:   190\t Loss:   25.67166\t Acc: 97.03%\n",
+      "Step:   200\t Loss:   24.73972\t Acc: 98.02%\n",
+      "Step:   210\t Loss:   23.87506\t Acc: 98.02%\n",
+      "Step:   220\t Loss:   23.07096\t Acc: 98.02%\n",
+      "Step:   230\t Loss:   22.32165\t Acc: 98.02%\n",
+      "Step:   240\t Loss:   21.62208\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   20.96781\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   20.35483\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   19.77959\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   19.23886\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   18.72972\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   18.24954\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   17.79592\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   17.36672\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.95997\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   16.57392\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   16.20698\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   15.85770\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   15.52480\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   15.20708\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.90350\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   14.61307\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   14.33491\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   14.06823\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   13.81229\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   13.56643\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   13.33002\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   13.10251\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.88338\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   12.67214\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.46837\t Acc: 100.00%\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 4\t True y: 4\n",
+      "[True]\t Prediction: 4\t True y: 4\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 4\t True y: 4\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 4\t True y: 4\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 1\t True y: 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Launch graph\n",
     "with tf.Session() as sess:\n",
