--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ex_lab-09-7-sigmoid_back_prop"
+    "# ex_lab-09-7-sigmoid_back_prop\n",
+    "\n",
+    "LaTeX:\n",
+    "  \\begin{align}\n",
+    "    E_0 &= mc^2                              \\\\\n",
+    "    E &= \\frac{mc^2}{\\sqrt{1-\\frac{v^2}{c^2}}} \\\\\n",
+    "    A_0\n",
+    "  \\end{align}"
    ]
   },
   {
@@ -107,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Predicting animal type based on various features\n",
