--- a/DeepLearningStudy/ex_lab-09-6-multi-linear_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-6-multi-linear_back_prop.ipynb
@@ -56,8 +56,7 @@
    },
    "outputs": [],
    "source": [
-    "tf.set_random_seed(777)  # reproducibility\n",
-    "\n"
+    "tf.set_random_seed(777)  # reproducibility\n"
    ]
   },
   {
@@ -81,12 +80,12 @@
     "          [89., 91., 90.],\n",
     "          [96., 98., 100.],\n",
     "          [73., 66., 70.]]\n",
+    "\n",
     "y_data = [[152.],\n",
     "          [185.],\n",
     "          [180.],\n",
     "          [196.],\n",
-    "          [142.]]\n",
-    "\n"
+    "          [142.]]\n"
    ]
   },
   {
@@ -106,8 +105,7 @@
    "source": [
     "# placeholders for a tensor that will be always fed.\n",
     "X = tf.placeholder(tf.float32, shape=[None, 3])\n",
-    "Y = tf.placeholder(tf.float32, shape=[None, 1])\n",
-    "\n"
+    "Y = tf.placeholder(tf.float32, shape=[None, 1])\n"
    ]
   },
   {
@@ -127,8 +125,7 @@
    "source": [
     "# Set wrong model weights\n",
     "W = tf.Variable(tf.truncated_normal([3, 1]))\n",
-    "b = tf.Variable(5.)\n",
-    "\n"
+    "b = tf.Variable(5.)\n"
    ]
   },
   {
@@ -155,9 +152,7 @@
     "# Forward prop\n",
     "hypothesis = tf.matmul(X, W) + b\n",
     "\n",
-    "print(hypothesis.shape, Y.shape)\n",
-    "\n",
-    "\n"
+    "print(hypothesis.shape, Y.shape)\n"
    ]
   },
   {
@@ -207,8 +202,7 @@
     "d_b = d_l1\n",
     "d_w = tf.matmul(tf.transpose(X), d_l1)\n",
     "\n",
-    "print(X, d_l1, d_w)\n",
-    "\n"
+    "print(X, d_l1, d_w)\n"
    ]
   },
   {
@@ -231,8 +225,7 @@
     "step = [\n",
     "    tf.assign(W, W - learning_rate * d_w),\n",
     "    tf.assign(b, b - learning_rate * tf.reduce_mean(d_b)),\n",
-    "]\n",
-    "\n"
+    "]\n"
    ]
   },
   {
@@ -30834,7 +30827,7 @@
     "for i in range(10000):\n",
     "    print(i, sess.run([step, RMSE], feed_dict={X: x_data, Y: y_data}))\n",
     "\n",
-    "print(sess.run(hypothesis, feed_dict={X: x_data}))"
+    "print(sess.run(hypothesis, feed_dict={X: x_data}))\n"
    ]
   },
   {
@@ -30863,7 +30856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
