--- a/DeepLearningStudy/ex_lab-09-1-xor.ipynb
+++ b/DeepLearningStudy/ex_lab-09-1-xor.ipynb
@@ -70,13 +70,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypothesis using sigmoid: tf.div(1., 1. + tf.exp(tf.matmul(X, W)))"
+    "# Hypothesis using sigmoid: \n",
+    "> tf.div(1., 1. + tf.exp(tf.matmul(X, W)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Hypothesis using sigmoid: tf.div(1., 1. + tf.exp(tf.matmul(X, W)))\n",
@@ -115,6 +118,14 @@
    "source": [
     "train = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(cost)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Accuracy computation\n",
+    "> True if hypothesis > 0.5 else False"
    ]
   },
   {
@@ -399,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
