--- a/DeepLearningStudy/ex_lab-09-4-xor_tensorboard.ipynb
+++ b/DeepLearningStudy/ex_lab-09-4-xor_tensorboard.ipynb
@@ -38,6 +38,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# for reproducibility"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -45,7 +52,24 @@
    },
    "outputs": [],
    "source": [
-    "tf.set_random_seed(777)  # for reproducibility\n",
+    "tf.set_random_seed(777)  # for reproducibility\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Init. variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "learning_rate = 0.01\n",
     "\n",
     "x_data = [[0, 0],\n",
@@ -164,7 +188,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Accuracy computation"
+    "# Accuracy computation\n",
+    ">  True if hypothesis > 0.5 else False"
    ]
   },
   {
@@ -592,7 +617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
