--- a/DeepLearningStudy/ex_lab-09-5-linear_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-5-linear_back_prop.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "# ex_lab-09-5-linear_back_prop\n",
-    "#### http://blog.aloni.org/posts/backprop-with-tensorflow/\n",
-    "#### https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.b3rvzhx89\n",
+    "  #### http://blog.aloni.org/posts/backprop-with-tensorflow/\n",
+    "  #### https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.b3rvzhx89\n",
     "## WIP"
    ]
   },
@@ -79,9 +79,7 @@
     "          [3.]]\n",
     "y_data = [[1.],\n",
     "          [2.],\n",
-    "          [3.]]\n",
-    "\n",
-    "\n"
+    "          [3.]]\n"
    ]
   },
   {
@@ -101,8 +99,7 @@
    "source": [
     "# placeholders for a tensor that will be always fed.\n",
     "X = tf.placeholder(tf.float32, shape=[None, 1])\n",
-    "Y = tf.placeholder(tf.float32, shape=[None, 1])\n",
-    "\n"
+    "Y = tf.placeholder(tf.float32, shape=[None, 1])\n"
    ]
   },
   {
@@ -122,8 +119,7 @@
    "source": [
     "# Set wrong model weights\n",
     "W = tf.Variable(tf.truncated_normal([1, 1]))\n",
-    "b = tf.Variable(5.)\n",
-    "\n"
+    "b = tf.Variable(5.)\n"
    ]
   },
   {
@@ -142,8 +138,7 @@
    "outputs": [],
    "source": [
     "# Forward prop\n",
-    "hypothesis = tf.matmul(X, W) + b\n",
-    "\n"
+    "hypothesis = tf.matmul(X, W) + b\n"
    ]
   },
   {
@@ -163,8 +158,7 @@
    "source": [
     "# diff\n",
     "assert hypothesis.shape.as_list() == Y.shape.as_list()\n",
-    "diff = (hypothesis - Y)\n",
-    "\n"
+    "diff = (hypothesis - Y)\n"
    ]
   },
   {
@@ -193,8 +187,7 @@
     "d_b = d_l1\n",
     "d_w = tf.matmul(tf.transpose(X), d_l1)\n",
     "\n",
-    "print(X, W, d_l1, d_w)\n",
-    "\n"
+    "print(X, W, d_l1, d_w)\n"
    ]
   },
   {
@@ -217,8 +210,7 @@
     "step = [\n",
     "    tf.assign(W, W - learning_rate * d_w),\n",
     "    tf.assign(b, b - learning_rate * tf.reduce_mean(d_b)),\n",
-    "]\n",
-    "\n"
+    "]\n"
    ]
   },
   {
@@ -1319,7 +1311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
