--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -41,11 +41,11 @@
     " Loss = tf.reduce\\_sum(Loss\\_i)\n",
     " \\end{aligned}\n",
     " \n",
-    " We want to compute that </br>\n",
+    " We want to compute that  \n",
     " \\begin{aligned}\n",
     " \\frac{dLoss}{dW} = ??? \\\\\n",
     " \\frac{dLoss}{db} = ??? \\\\\n",
-    "  \\end{aligned} </br>\n",
+    "  \\end{aligned}  \n",
     " please read \"Neural Net Backprop in one slide!\" for deriving formulas\n",
     "\n",
     " \n",
