--- a/DeepLearningStudy/ex_lab-09-1-xor.ipynb
+++ b/DeepLearningStudy/ex_lab-09-1-xor.ipynb
@@ -6,12 +6,12 @@
     "collapsed": true
    },
    "source": [
-    "# [ Lab 9 XOR ]\n"
+    "# [ Lab 9-1 : XOR ]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -91,12 +91,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# cost/loss function"
+    "# Cost/loss function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -105,19 +105,8 @@
     "### cost/loss function\n",
     "cost = -tf.reduce_mean(Y * tf.log(hypothesis) + (1 - Y) *\n",
     "                       tf.log(1 - hypothesis))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(cost)\n",
-    "\n"
+    "\n",
+    "train = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(cost)"
    ]
   },
   {
@@ -130,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -152,215 +141,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 0.814608 [[ 1.91052246]\n",
-      " [-0.08975666]]\n",
-      "100 0.741426 [[ 1.21888113]\n",
-      " [ 0.11231249]]\n",
-      "200 0.71259 [[ 0.75607646]\n",
-      " [ 0.15842664]]\n",
-      "300 0.701181 [[ 0.47094515]\n",
-      " [ 0.15055655]]\n",
-      "400 0.696558 [[ 0.2960425 ]\n",
-      " [ 0.12469153]]\n",
-      "500 0.694628 [[ 0.18796232]\n",
-      " [ 0.09638887]]\n",
-      "600 0.693801 [[ 0.12048256]\n",
-      " [ 0.07155602]]\n",
-      "700 0.693439 [[ 0.07789581]\n",
-      " [ 0.05175723]]\n",
-      "800 0.693278 [[ 0.05074268]\n",
-      " [ 0.03677881]]\n",
-      "900 0.693206 [[ 0.03326838]\n",
-      " [ 0.02580865]]\n",
-      "1000 0.693174 [[ 0.02193047]\n",
-      " [ 0.01794536]]\n",
-      "1100 0.693159 [[ 0.01452198]\n",
-      " [ 0.01239308]]\n",
-      "1200 0.693153 [[ 0.00965202]\n",
-      " [ 0.00851475]]\n",
-      "1300 0.69315 [[ 0.00643475]\n",
-      " [ 0.0058272 ]]\n",
-      "1400 0.693148 [[ 0.00430048]\n",
-      " [ 0.00397593]]\n",
-      "1500 0.693148 [[ 0.00287985]\n",
-      " [ 0.00270645]]\n",
-      "1600 0.693147 [[ 0.0019316 ]\n",
-      " [ 0.00183897]]\n",
-      "1700 0.693147 [[ 0.00129726]\n",
-      " [ 0.00124779]]\n",
-      "1800 0.693147 [[ 0.00087212]\n",
-      " [ 0.00084569]]\n",
-      "1900 0.693147 [[ 0.00058679]\n",
-      " [ 0.00057267]]\n",
-      "2000 0.693147 [[ 0.00039511]\n",
-      " [ 0.00038756]]\n",
-      "2100 0.693147 [[ 0.00026615]\n",
-      " [ 0.00026212]]\n",
-      "2200 0.693147 [[ 0.00017935]\n",
-      " [ 0.00017719]]\n",
-      "2300 0.693147 [[ 0.0001209 ]\n",
-      " [ 0.00011974]]\n",
-      "2400 0.693147 [[  8.15108579e-05]\n",
-      " [  8.08963669e-05]]\n",
-      "2500 0.693147 [[  5.49703982e-05]\n",
-      " [  5.46390220e-05]]\n",
-      "2600 0.693147 [[  3.70785747e-05]\n",
-      " [  3.69006848e-05]]\n",
-      "2700 0.693147 [[  2.50086305e-05]\n",
-      " [  2.49112127e-05]]\n",
-      "2800 0.693147 [[  1.68696206e-05]\n",
-      " [  1.68198821e-05]]\n",
-      "2900 0.693147 [[  1.13800324e-05]\n",
-      " [  1.13526476e-05]]\n",
-      "3000 0.693147 [[  7.66517314e-06]\n",
-      " [  7.65119785e-06]]\n",
-      "3100 0.693147 [[  5.16028922e-06]\n",
-      " [  5.15525426e-06]]\n",
-      "3200 0.693147 [[  3.49284619e-06]\n",
-      " [  3.48930143e-06]]\n",
-      "3300 0.693147 [[  2.34992717e-06]\n",
-      " [  2.34936283e-06]]\n",
-      "3400 0.693147 [[  1.58847593e-06]\n",
-      " [  1.58791158e-06]]\n",
-      "3500 0.693147 [[  1.07140215e-06]\n",
-      " [  1.07083781e-06]]\n",
-      "3600 0.693147 [[  7.10793074e-07]\n",
-      " [  7.10228733e-07]]\n",
-      "3700 0.693147 [[  4.66413866e-07]\n",
-      " [  4.65849496e-07]]\n",
-      "3800 0.693147 [[  3.17401685e-07]\n",
-      " [  3.16837315e-07]]\n",
-      "3900 0.693147 [[  1.96701819e-07]\n",
-      " [  1.96137449e-07]]\n",
-      "4000 0.693147 [[  1.44547556e-07]\n",
-      " [  1.43983186e-07]]\n",
-      "4100 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "4200 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "4300 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "4400 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "4500 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "4600 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "4700 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "4800 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "4900 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5000 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5100 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5200 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5300 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5400 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5500 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5600 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5700 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5800 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "5900 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6000 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6100 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6200 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6300 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6400 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6500 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6600 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6700 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6800 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "6900 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7000 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7100 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7200 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7300 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7400 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7500 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7600 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7700 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7800 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "7900 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8000 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8100 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8200 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8300 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8400 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8500 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8600 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8700 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8800 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "8900 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9000 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9100 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9200 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9300 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9400 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9500 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9600 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9700 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9800 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "9900 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
-      "10000 0.693147 [[  1.32626582e-07]\n",
-      " [  1.32062212e-07]]\n",
+      "0 0.875979 [[ 0.78635675]\n",
+      " [ 0.66282606]]\n",
+      "100 0.695712 [[ 0.23303679]\n",
+      " [ 0.16537334]]\n",
+      "200 0.694273 [[ 0.14686324]\n",
+      " [ 0.11071212]]\n",
+      "300 0.693657 [[ 0.09652308]\n",
+      " [ 0.07720926]]\n",
+      "400 0.693379 [[ 0.06380107]\n",
+      " [ 0.05348304]]\n",
+      "500 0.693252 [[ 0.04234108]\n",
+      " [ 0.03682898]]\n",
+      "600 0.693195 [[ 0.02819196]\n",
+      " [ 0.02524729]]\n",
+      "700 0.693169 [[ 0.01882168]\n",
+      " [ 0.01724861]]\n",
+      "800 0.693157 [[ 0.01259336]\n",
+      " [ 0.01175302]]\n",
+      "900 0.693152 [[ 0.00844095]\n",
+      " [ 0.00799203]]\n",
+      "1000 0.693149 [[ 0.00566575]\n",
+      " [ 0.00542593]]\n",
+      "1100 0.693148 [[ 0.00380729]\n",
+      " [ 0.00367919]]\n",
+      "1200 0.693148 [[ 0.00256079]\n",
+      " [ 0.00249235]]\n",
+      "1300 0.693147 [[ 0.00172364]\n",
+      " [ 0.00168707]]\n",
+      "1400 0.693147 [[ 0.00116083]\n",
+      " [ 0.00114128]]\n",
+      "1500 0.693147 [[ 0.00078214]\n",
+      " [ 0.0007717 ]]\n",
+      "1600 0.693147 [[ 0.00052722]\n",
+      " [ 0.00052163]]\n",
+      "1700 0.693147 [[ 0.00035547]\n",
+      " [ 0.00035248]]\n",
+      "1800 0.693147 [[ 0.00023971]\n",
+      " [ 0.00023812]]\n",
+      "1900 0.693147 [[ 0.00016167]\n",
+      " [ 0.00016082]]\n",
+      "2000 0.693147 [[ 0.00010905]\n",
+      " [ 0.0001086 ]]\n",
+      "2100 0.693147 [[  7.35745998e-05]\n",
+      " [  7.33270717e-05]]\n",
+      "2200 0.693147 [[  4.96314133e-05]\n",
+      " [  4.95016211e-05]]\n",
+      "2300 0.693147 [[  3.34800388e-05]\n",
+      " [  3.34098659e-05]]\n",
+      "2400 0.693147 [[  2.25828153e-05]\n",
+      " [  2.25469157e-05]]\n",
+      "2500 0.693147 [[  1.52290941e-05]\n",
+      " [  1.52095818e-05]]\n",
+      "2600 0.693147 [[  1.02670037e-05]\n",
+      " [  1.02534523e-05]]\n",
+      "2700 0.693147 [[  6.93212905e-06]\n",
+      " [  6.92453659e-06]]\n",
+      "2800 0.693147 [[  4.66566371e-06]\n",
+      " [  4.66105121e-06]]\n",
+      "2900 0.693147 [[  3.12637053e-06]\n",
+      " [  3.12622865e-06]]\n",
+      "3000 0.693147 [[  2.11755855e-06]\n",
+      " [  2.11741667e-06]]\n",
+      "3100 0.693147 [[  1.42465376e-06]\n",
+      " [  1.42451188e-06]]\n",
+      "3200 0.693147 [[  9.56754661e-07]\n",
+      " [  9.56612780e-07]]\n",
+      "3300 0.693147 [[  6.28928547e-07]\n",
+      " [  6.28786665e-07]]\n",
+      "3400 0.693147 [[  4.20312062e-07]\n",
+      " [  4.20170153e-07]]\n",
+      "3500 0.693147 [[  2.71299882e-07]\n",
+      " [  2.71157973e-07]]\n",
+      "3600 0.693147 [[  1.64011112e-07]\n",
+      " [  1.63869203e-07]]\n",
+      "3700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "3800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "3900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "4900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "5900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "6900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "7900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "8900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "10000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
       "\n",
       "Hypothesis:  [[ 0.5]\n",
       " [ 0.5]\n",
