--- a/DeepLearningStudy/ex_lab-09-2-xor-nn.ipynb
+++ b/DeepLearningStudy/ex_lab-09-2-xor-nn.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [ Lab 9-2 : XOR ]\n"
+    "# [ Lab 9-2 : XOR_NN ]\n"
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# cost/loss function"
+    "# Cost/loss function"
    ]
   },
   {
@@ -288,16 +288,16 @@
       "       [-7.26440191]], dtype=float32)]\n",
       "5000 0.0453608 [array([[ 5.61032057,  5.15951204],\n",
       "       [-5.69579315, -4.82549763]], dtype=float32), array([[ 7.97181845],\n",
-      "       [-7.34886312]], dtype=float32)]\n",
-      "5100 0.0434872 [array([[ 5.63504934,  5.19806671],\n",
-      "       [-5.72141838, -4.86548567]], dtype=float32), array([[ 8.04513645],\n",
-      "       [-7.43001986]], dtype=float32)]\n"
+      "       [-7.34886312]], dtype=float32)]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "5100 0.0434872 [array([[ 5.63504934,  5.19806671],\n",
+      "       [-5.72141838, -4.86548567]], dtype=float32), array([[ 8.04513645],\n",
+      "       [-7.43001986]], dtype=float32)]\n",
       "5200 0.0417547 [array([[ 5.65876007,  5.23487711],\n",
       "       [-5.74605036, -4.90363264]], dtype=float32), array([[ 8.11600304],\n",
       "       [-7.508111  ]], dtype=float32)]\n",
