--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -33,19 +33,19 @@
     "\n",
     "# [Network Architecture]\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     " Input: x \\\\\n",
     " Layer1: {x } W + b \\\\\n",
     " Output\\ layer = σ(Layer1) \\\\\n",
     " Loss\\_i &= - y * log(σ(Layer1)) - (1 - y) * log(1 - σ(Layer1)) \\\\\n",
     " Loss &= tf.reduce\\_sum(Loss\\_i)\n",
-    " \\end{align}\n",
+    " \\end{align*}\n",
     " \n",
     " We want to compute that  \n",
-    " \\begin{align}\n",
+    " \\begin{align*}\n",
     " \\frac{dLoss}{dW} &= ??? \\\\\n",
     " \\frac{dLoss}{db} &= ??? \\\\\n",
-    "  \\end{align}  \n",
+    "  \\end{align*}  \n",
     " please read \"Neural Net Backprop in one slide!\" for deriving formulas\n",
     "\n",
     " \n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -402,9 +402,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step:     0\t Loss:  453.74802\t Acc: 38.61%\n",
+      "Step:    10\t Loss:  135.79248\t Acc: 83.17%\n",
+      "Step:    20\t Loss:   95.05664\t Acc: 88.12%\n",
+      "Step:    30\t Loss:   77.29309\t Acc: 91.09%\n",
+      "Step:    40\t Loss:   66.43570\t Acc: 93.07%\n",
+      "Step:    50\t Loss:   58.81989\t Acc: 94.06%\n",
+      "Step:    60\t Loss:   53.09288\t Acc: 94.06%\n",
+      "Step:    70\t Loss:   48.58739\t Acc: 96.04%\n",
+      "Step:    80\t Loss:   44.92378\t Acc: 96.04%\n",
+      "Step:    90\t Loss:   41.86683\t Acc: 97.03%\n",
+      "Step:   100\t Loss:   39.26264\t Acc: 97.03%\n",
+      "Step:   110\t Loss:   37.00650\t Acc: 97.03%\n",
+      "Step:   120\t Loss:   35.02472\t Acc: 97.03%\n",
+      "Step:   130\t Loss:   33.26402\t Acc: 97.03%\n",
+      "Step:   140\t Loss:   31.68490\t Acc: 97.03%\n",
+      "Step:   150\t Loss:   30.25749\t Acc: 97.03%\n",
+      "Step:   160\t Loss:   28.95874\t Acc: 97.03%\n",
+      "Step:   170\t Loss:   27.77063\t Acc: 97.03%\n",
+      "Step:   180\t Loss:   26.67879\t Acc: 97.03%\n",
+      "Step:   190\t Loss:   25.67166\t Acc: 97.03%\n",
+      "Step:   200\t Loss:   24.73972\t Acc: 98.02%\n",
+      "Step:   210\t Loss:   23.87506\t Acc: 98.02%\n",
+      "Step:   220\t Loss:   23.07096\t Acc: 98.02%\n",
+      "Step:   230\t Loss:   22.32165\t Acc: 98.02%\n",
+      "Step:   240\t Loss:   21.62208\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   20.96780\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   20.35482\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   19.77959\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   19.23885\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   18.72972\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   18.24953\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   17.79592\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   17.36671\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   16.95996\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   16.57392\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   16.20697\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   15.85770\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   15.52480\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   15.20708\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   14.90350\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   14.61307\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   14.33491\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   14.06823\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   13.81229\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   13.56642\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   13.33002\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   13.10250\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.88337\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   12.67214\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.46836\t Acc: 100.00%\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 4\t True y: 4\n",
+      "[True]\t Prediction: 4\t True y: 4\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 4\t True y: 4\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 4\t True y: 4\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 2\t True y: 2\n",
+      "[True]\t Prediction: 3\t True y: 3\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 1\t True y: 1\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 5\t True y: 5\n",
+      "[True]\t Prediction: 0\t True y: 0\n",
+      "[True]\t Prediction: 6\t True y: 6\n",
+      "[True]\t Prediction: 1\t True y: 1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Launch graph\n",
     "with tf.Session() as sess:\n",
