--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -32,20 +32,20 @@
     "> 4. [Yes you should understand backprop by Andrej Karpathy](https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.cockptkn7)\n",
     "\n",
     "# [Network Architecture]\n",
-    "\n",
-    "\\begin{align*}\n",
+    ">\\begin{align*}\n",
     " Input: x \\\\\n",
     " Layer1: {x } W + b \\\\\n",
-    " Output\\ layer = σ(Layer1) \\\\\n",
+    " Output\\ layer = {σ}(Layer1) \\\\\n",
     " Loss\\_i &= - y * log(σ(Layer1)) - (1 - y) * log(1 - σ(Layer1)) \\\\\n",
     " Loss &= tf.reduce\\_sum(Loss\\_i)\n",
-    " \\end{align*}\n",
+    "\\end{align*}\n",
     " \n",
     " We want to compute that  </br>\n",
-    " \\begin{align*}\n",
+    " >\\begin{align*}\n",
     " \\frac{dLoss}{dW} &= ??? \\\\\n",
     " \\frac{dLoss}{db} &= ??? \\\\\n",
     " \\end{align*}  \n",
+    " \n",
     " please read \"Neural Net Backprop in one slide!\" for deriving formulas\n",
     "\n",
     " \n",
