--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -36,7 +36,7 @@
     "\\begin{align*}\n",
     " Input: x \\\\\n",
     " Layer1: {x }{W} + b \\\\\n",
-    " Output\\:layer = {σ}(Layer1) \\\\\n",
+    " Output\\:layer = {σ}{(Layer1)} \\\\\n",
     " Loss\\_i &= - y * log(σ(Layer1)) - (1 - y) * log(1 - {σ}{(Layer1)}) \\\\\n",
     " Loss &= tf.reduce\\_sum(Loss\\_i)\n",
     " \\end{align*}\n",
