--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -33,19 +33,20 @@
     "\n",
     "# [Network Architecture]\n",
     "\n",
-    "\\begin{align*}\n",
+    ">\\begin{align*}\n",
     " Input: x \\\\\n",
-    " Layer1: {x }{W} + b \\\\\n",
-    " Output\\:layer = {σ}{(Layer1)} \\\\\n",
-    " Loss\\_i &= - y * log(σ(Layer1)) - (1 - y) * log(1 - {σ}{(Layer1)}) \\\\\n",
+    " Layer1: {x}{W} + b \\\\\n",
+    " Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
+    " Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
     " Loss &= tf.reduce\\_sum(Loss\\_i)\n",
     " \\end{align*}\n",
     " \n",
     " We want to compute that  \n",
-    " \\begin{align*}\n",
+    " >\\begin{align*}\n",
     " \\frac{dLoss}{dW} &= ??? \\\\\n",
     " \\frac{dLoss}{db} &= ??? \\\\\n",
     "  \\end{align*}  \n",
+    " \n",
     " please read \"Neural Net Backprop in one slide!\" for deriving formulas\n",
     "\n",
     " \n",
