--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -7,12 +7,10 @@
     "# ex_lab-09-7-sigmoid_back_prop\n",
     "\n",
     "LaTeX:\n",
-    "  \\begin{align}\n",
-    "    E_0 &= mc^2                              \\\\\n",
+    "  \\begin{align*}\n",
+    "    E_0 &= mc^2                                \\\\ \n",
     "    E &= \\frac{mc^2}{\\sqrt{1-\\frac{v^2}{c^2}}} \\\\\n",
-    "    A_0 \\\\\n",
-    "    \\TeX\\\n",
-    "  \\end{align}\n",
+    "  \\end{align*}\n",
     "  "
    ]
   },
@@ -33,24 +31,21 @@
     "\n",
     "# [Network Architecture]\n",
     "\n",
-    ">\\begin{align*}\n",
-    " Input: x \\\\\n",
-    " Layer1: {x}{W} + b \\\\\n",
-    " Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
-    " Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
-    " Loss &= tf.reduce\\_sum(Loss\\_i)\n",
-    " \\end{align*}\n",
+    ">\\begin{aligned}\n",
+    "  Input: x  \\\\\n",
+    "  Layer1: {x}{W} + b \\\\\n",
+    "  Output\\:layer = {\\sigma}{(Layer1)} \\\\\n",
+    "  Loss\\_i &= - y * log(\\sigma(Layer1)) - (1 - y) * log(1 - {\\sigma}{(Layer1)}) \\\\\n",
+    "  Loss &= tf.reduce\\_sum(Loss\\_i)\n",
+    " \\end{aligned}\n",
     " \n",
     " We want to compute that  \n",
-    " >\\begin{align*}\n",
-    " \\frac{dLoss}{dW} &= ??? \\\\\n",
-    " \\frac{dLoss}{db} &= ??? \\\\\n",
-    "  \\end{align*}  \n",
+    " >\\begin{aligned}\n",
+    "  \\frac{dLoss}{dW} &= ??? \\\\\n",
+    "  \\frac{dLoss}{db} &= ??? \\\\\n",
+    " \\end{aligned}  \n",
     " \n",
-    " please read \"Neural Net Backprop in one slide!\" for deriving formulas\n",
-    "\n",
-    " \n",
-    " \n"
+    " please read \"Neural Net Backprop in one slide!\" for deriving formulas\n"
    ]
   },
   {
