--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ex_lab-09-7-sigmoid_back_prop\n",
-    "\n",
-    "LaTeX:\n",
-    "  \\begin{align*}\n",
-    "    E_0 &= mc^2                                \\\\ \n",
-    "    E &= \\frac{mc^2}{\\sqrt{1-\\frac{v^2}{c^2}}} \\\\\n",
-    "  \\end{align*}\n",
-    "  "
+    "# ex_lab-09-7-sigmoid_back_prop\n"
    ]
   },
   {
@@ -407,15 +400,15 @@
      "text": [
       "Step:     0\t Loss:  453.74802\t Acc: 38.61%\n",
       "Step:    10\t Loss:  135.79248\t Acc: 83.17%\n",
-      "Step:    20\t Loss:   95.05664\t Acc: 88.12%\n",
+      "Step:    20\t Loss:   95.05665\t Acc: 88.12%\n",
       "Step:    30\t Loss:   77.29309\t Acc: 91.09%\n",
-      "Step:    40\t Loss:   66.43570\t Acc: 93.07%\n",
+      "Step:    40\t Loss:   66.43569\t Acc: 93.07%\n",
       "Step:    50\t Loss:   58.81989\t Acc: 94.06%\n",
       "Step:    60\t Loss:   53.09288\t Acc: 94.06%\n",
       "Step:    70\t Loss:   48.58739\t Acc: 96.04%\n",
-      "Step:    80\t Loss:   44.92378\t Acc: 96.04%\n",
-      "Step:    90\t Loss:   41.86683\t Acc: 97.03%\n",
-      "Step:   100\t Loss:   39.26264\t Acc: 97.03%\n",
+      "Step:    80\t Loss:   44.92377\t Acc: 96.04%\n",
+      "Step:    90\t Loss:   41.86682\t Acc: 97.03%\n",
+      "Step:   100\t Loss:   39.26265\t Acc: 97.03%\n",
       "Step:   110\t Loss:   37.00650\t Acc: 97.03%\n",
       "Step:   120\t Loss:   35.02472\t Acc: 97.03%\n",
       "Step:   130\t Loss:   33.26402\t Acc: 97.03%\n",
@@ -431,7 +424,7 @@
       "Step:   230\t Loss:   22.32165\t Acc: 98.02%\n",
       "Step:   240\t Loss:   21.62208\t Acc: 100.00%\n",
       "Step:   250\t Loss:   20.96780\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   20.35482\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   20.35483\t Acc: 100.00%\n",
       "Step:   270\t Loss:   19.77959\t Acc: 100.00%\n",
       "Step:   280\t Loss:   19.23885\t Acc: 100.00%\n",
       "Step:   290\t Loss:   18.72972\t Acc: 100.00%\n",
@@ -440,7 +433,7 @@
       "Step:   320\t Loss:   17.36671\t Acc: 100.00%\n",
       "Step:   330\t Loss:   16.95996\t Acc: 100.00%\n",
       "Step:   340\t Loss:   16.57392\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   16.20697\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   16.20698\t Acc: 100.00%\n",
       "Step:   360\t Loss:   15.85770\t Acc: 100.00%\n",
       "Step:   370\t Loss:   15.52480\t Acc: 100.00%\n",
       "Step:   380\t Loss:   15.20708\t Acc: 100.00%\n",
@@ -451,10 +444,10 @@
       "Step:   430\t Loss:   13.81229\t Acc: 100.00%\n",
       "Step:   440\t Loss:   13.56642\t Acc: 100.00%\n",
       "Step:   450\t Loss:   13.33002\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   13.10250\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   13.10251\t Acc: 100.00%\n",
       "Step:   470\t Loss:   12.88337\t Acc: 100.00%\n",
       "Step:   480\t Loss:   12.67214\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.46836\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   12.46837\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
