--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -205,12 +205,14 @@
    "source": [
     "# sigma Function\n",
     ">  sigmoid function <br />\n",
-    "> σ(x) = 1 / (1 + exp(-x))"
+    "> \\begin{aligned}\n",
+    "σ(x) = \\frac{1}{(1 + e^{-x})}\n",
+    "\\end{aligned}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -229,12 +231,14 @@
    "source": [
     "# sigma_prime Function:\n",
     "> derivative of the sigmoid function <br />\n",
-    "> σ'(x) = σ(x) * (1 - σ(x))"
+    "> \\begin{aligned}\n",
+    "\\sigma'(x) = \\sigma(x) * (1 - \\sigma(x))\n",
+    "\\end{aligned}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -277,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -298,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -320,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -345,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -369,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -391,63 +395,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\t Loss:  453.74802\t Acc: 38.61%\n",
-      "Step:    10\t Loss:  135.79248\t Acc: 83.17%\n",
-      "Step:    20\t Loss:   95.05665\t Acc: 88.12%\n",
-      "Step:    30\t Loss:   77.29309\t Acc: 91.09%\n",
-      "Step:    40\t Loss:   66.43569\t Acc: 93.07%\n",
-      "Step:    50\t Loss:   58.81989\t Acc: 94.06%\n",
-      "Step:    60\t Loss:   53.09288\t Acc: 94.06%\n",
-      "Step:    70\t Loss:   48.58739\t Acc: 96.04%\n",
-      "Step:    80\t Loss:   44.92377\t Acc: 96.04%\n",
-      "Step:    90\t Loss:   41.86682\t Acc: 97.03%\n",
-      "Step:   100\t Loss:   39.26265\t Acc: 97.03%\n",
-      "Step:   110\t Loss:   37.00650\t Acc: 97.03%\n",
-      "Step:   120\t Loss:   35.02472\t Acc: 97.03%\n",
-      "Step:   130\t Loss:   33.26402\t Acc: 97.03%\n",
-      "Step:   140\t Loss:   31.68490\t Acc: 97.03%\n",
-      "Step:   150\t Loss:   30.25749\t Acc: 97.03%\n",
-      "Step:   160\t Loss:   28.95874\t Acc: 97.03%\n",
-      "Step:   170\t Loss:   27.77063\t Acc: 97.03%\n",
-      "Step:   180\t Loss:   26.67879\t Acc: 97.03%\n",
-      "Step:   190\t Loss:   25.67166\t Acc: 97.03%\n",
-      "Step:   200\t Loss:   24.73972\t Acc: 98.02%\n",
-      "Step:   210\t Loss:   23.87506\t Acc: 98.02%\n",
-      "Step:   220\t Loss:   23.07096\t Acc: 98.02%\n",
-      "Step:   230\t Loss:   22.32165\t Acc: 98.02%\n",
-      "Step:   240\t Loss:   21.62208\t Acc: 100.00%\n",
-      "Step:   250\t Loss:   20.96780\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   20.35483\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   19.77959\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   19.23885\t Acc: 100.00%\n",
-      "Step:   290\t Loss:   18.72972\t Acc: 100.00%\n",
-      "Step:   300\t Loss:   18.24953\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   17.79592\t Acc: 100.00%\n",
-      "Step:   320\t Loss:   17.36671\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   16.95996\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   16.57392\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   16.20698\t Acc: 100.00%\n",
-      "Step:   360\t Loss:   15.85770\t Acc: 100.00%\n",
-      "Step:   370\t Loss:   15.52480\t Acc: 100.00%\n",
-      "Step:   380\t Loss:   15.20708\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   14.90350\t Acc: 100.00%\n",
-      "Step:   400\t Loss:   14.61307\t Acc: 100.00%\n",
-      "Step:   410\t Loss:   14.33491\t Acc: 100.00%\n",
-      "Step:   420\t Loss:   14.06823\t Acc: 100.00%\n",
-      "Step:   430\t Loss:   13.81229\t Acc: 100.00%\n",
-      "Step:   440\t Loss:   13.56642\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   13.33002\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   13.10251\t Acc: 100.00%\n",
-      "Step:   470\t Loss:   12.88337\t Acc: 100.00%\n",
-      "Step:   480\t Loss:   12.67214\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.46837\t Acc: 100.00%\n",
+      "Step:     0\t Loss:  622.77124\t Acc: 37.62%\n",
+      "Step:    10\t Loss:  134.19913\t Acc: 80.20%\n",
+      "Step:    20\t Loss:   84.24376\t Acc: 91.09%\n",
+      "Step:    30\t Loss:   66.77851\t Acc: 92.08%\n",
+      "Step:    40\t Loss:   57.17104\t Acc: 93.07%\n",
+      "Step:    50\t Loss:   50.46732\t Acc: 95.05%\n",
+      "Step:    60\t Loss:   45.43508\t Acc: 95.05%\n",
+      "Step:    70\t Loss:   41.49651\t Acc: 95.05%\n",
+      "Step:    80\t Loss:   38.31973\t Acc: 95.05%\n",
+      "Step:    90\t Loss:   35.69547\t Acc: 97.03%\n",
+      "Step:   100\t Loss:   33.48457\t Acc: 97.03%\n",
+      "Step:   110\t Loss:   31.59102\t Acc: 98.02%\n",
+      "Step:   120\t Loss:   29.94665\t Acc: 100.00%\n",
+      "Step:   130\t Loss:   28.50175\t Acc: 100.00%\n",
+      "Step:   140\t Loss:   27.21925\t Acc: 100.00%\n",
+      "Step:   150\t Loss:   26.07095\t Acc: 100.00%\n",
+      "Step:   160\t Loss:   25.03497\t Acc: 100.00%\n",
+      "Step:   170\t Loss:   24.09410\t Acc: 100.00%\n",
+      "Step:   180\t Loss:   23.23459\t Acc: 100.00%\n",
+      "Step:   190\t Loss:   22.44529\t Acc: 100.00%\n",
+      "Step:   200\t Loss:   21.71711\t Acc: 100.00%\n",
+      "Step:   210\t Loss:   21.04250\t Acc: 100.00%\n",
+      "Step:   220\t Loss:   20.41517\t Acc: 100.00%\n",
+      "Step:   230\t Loss:   19.82984\t Acc: 100.00%\n",
+      "Step:   240\t Loss:   19.28199\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   18.76780\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   18.28395\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   17.82759\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   17.39622\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   16.98766\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   16.59999\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   16.23152\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   15.88073\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   15.54629\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   15.22699\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   14.92177\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   14.62963\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   14.34970\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   14.08119\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   13.82336\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   13.57556\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   13.33718\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   13.10766\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   12.88649\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   12.67321\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   12.46737\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   12.26859\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.07648\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   11.89070\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   11.71094\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
@@ -557,7 +561,7 @@
        "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
