--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -204,9 +204,9 @@
    "metadata": {},
    "source": [
     "# sigma Function\n",
-    ">  sigmoid function <br />\n",
+    "> Sigmoid(logistic) function <br />\n",
     "> \\begin{aligned}\n",
-    "σ(x) = \\frac{1}{(1 + e^{-x})}\n",
+    "\\sigma(x) = \\frac{1}{(1 + e^{-x})}\n",
     "\\end{aligned}"
    ]
   },
@@ -230,7 +230,7 @@
    "metadata": {},
    "source": [
     "# sigma_prime Function:\n",
-    "> derivative of the sigmoid function <br />\n",
+    "> derivative of the sigmoid function <br /><br />\n",
     "> \\begin{aligned}\n",
     "\\sigma'(x) = \\sigma(x) * (1 - \\sigma(x))\n",
     "\\end{aligned}\n"
