--- a/DeepLearningStudy/ex_lab-08-tensor_manipulation.ipynb
+++ b/DeepLearningStudy/ex_lab-08-tensor_manipulation.ipynb
@@ -698,7 +698,9 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = [[0, 1, 2],\n",
@@ -1600,7 +1602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
